Preparan't el on this page' i el about me

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "portafoli"
 version = "0.1.0"
-description = "Portafoli de nauvi.dev"
+description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
